tela cadastro imovel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="menu_ads">Meus Anúncios</string>
     <string name="menu_properties">Meus imóveis</string>
     <string name="menu_login">Login</string>
+    <string name="button">Button</string>
 </resources>
